# chat_app

./: main.py  pyproject.toml
app/backend/: main.py  test.db
app/backend/api/routes/: chat_route.py
app/backend/core/: config.py
app/backend/models/: chat_model.py  conversation_model.py
app/backend/schema/: chat_schema.py  conversation_schema.py
app/backend/services/: langchain_gemini.py
app/frontend/: chat.py  index.html  script.js  style1.css
